<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/primary_back_dark"
    android:orientation="vertical">

    <!--标题-->
    <LinearLayout
        android:id="@+id/llTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="?attr/blue_main"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:scaleType="center"
            android:src="?attr/icon_back"
            android:visibility="visible" />

        <View
            android:id="@+id/view_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:text="@string/currency_address"
            android:textColor="?attr/color_text_white"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvSave"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:minWidth="48dp"
            android:text="@string/save"
            android:textColor="?attr/color_text_white"
            android:textSize="14sp"
            android:visibility="visible" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/title_layout_bg"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/mine_address"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
            android:hint="@string/mine_address"
            android:minHeight="24dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="?attr/primary_text_gray"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/title_layout_bg"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/remarks"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etRemark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:hint="@string/remarks"
            android:minHeight="24dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="?attr/primary_text_gray"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/title_layout_bg"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/phone_code"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/code"
            android:inputType="number"
            android:minHeight="24dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="?attr/primary_text_gray"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/selector_send_bind_phone_code"
            android:paddingBottom="3dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="3dp"
            android:text="@string/send_code"
            android:textColor="@drawable/selector_send_bind_phone_color"
            android:textSize="14sp" />

    </LinearLayout>


</LinearLayout>