<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_eeeeee"
    android:orientation="vertical">

    <!--标题-->
    <LinearLayout
        android:id="@+id/llTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:scaleType="center"
            android:src="@drawable/icon_back"
            android:visibility="visible" />

        <View
            android:id="@+id/view_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:text="@string/international_remittance"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvConfirm"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:minWidth="48dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:paddingLeft="16dp"
        android:paddingRight="20dp"
        android:visibility="visible">

        <TextView
            android:layout_width="88dp"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:text="@string/name"
            android:textColor="@color/color_333333"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="right|center"
            android:hint="@string/name"
            android:text=""
            android:textColor="@color/color_999999"
            android:textColorHint="@color/primaryTextGray"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/primaryBackNormal"
        android:paddingLeft="16dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:text="@string/Collection_Address"
            android:textColor="@color/primaryText"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/Collection_Address"
            android:gravity="center|right"
            android:layout_marginRight="20dp"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/primaryTextGray"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/primaryBackNormal"
        android:paddingLeft="16dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:text="@string/capital_password"
            android:textColor="@color/primaryText"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/etNewPwd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/capital_passwordTip"
            android:gravity="center|right"
            android:layout_marginRight="20dp"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/primaryTextGray"
            android:textSize="15sp"/>

    </LinearLayout>


</LinearLayout>