<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/color_eeeeee"
    android:orientation="vertical">

    <!--标题-->
    <LinearLayout
        android:id="@+id/llTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="?attr/blue_main"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:scaleType="center"
            android:src="?attr/icon_back"
            android:visibility="visible" />

        <View
            android:id="@+id/view_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:text="@string/transfer_asset"
            android:textColor="?attr/color_text_white"
            android:textSize="18dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:minWidth="48dp"
            android:textColor="@color/text_orange"
            android:textSize="14dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/circle_conner_rect_white_line"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_from"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="7dp"
            android:gravity="center"
            android:text="@string/from"
            android:textColor="?attr/color_999999" />

        <LinearLayout
            android:id="@+id/ll_transfer_from"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/tv_from"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvFrom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="?attr/color_333333" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/iv_switch"
            android:background="?attr/color_eeeeee" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="7dp"
            android:gravity="center"
            android:text="@string/to"
            android:textColor="?attr/color_999999" />

        <LinearLayout
            android:id="@+id/ll_transfer_to"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/tv_from"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_asset_to"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/exchange_asset"
                android:textColor="?attr/color_333333" />



        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/transfer_amount"
        android:textColor="?attr/color_333333" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/dimen_16"
            android:paddingBottom="10dp"
            android:paddingLeft="4dp"
            android:paddingRight="@dimen/dimen_16"
            android:background="@drawable/circle_conner_rect_white_line"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/et_transfer_amount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:inputType="number"
                android:gravity="center_vertical"
                android:hint="@string/transfer_amount_input"
                android:textColor="?attr/color_333333"
                android:textColorHint="@color/primaryTextGray"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_coin_name1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="?attr/black" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_transfer_all"
            android:layout_width="@dimen/dimen_64"
            android:layout_height="@dimen/dimen_32"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/circle_conner_rect_primay"
            android:text="@string/all"
            android:textColor="@color/colorPrimary"
            android:textSize="14dp"
            android:visibility="gone"/>

    </LinearLayout>


    <TextView
        android:id="@+id/tv_available_coin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="?attr/color_999999"
        android:textSize="12dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tv_commit"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/dialog_confirm"
        android:textSize="16dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/shape_c2c_tv_buy_yuan" />
</LinearLayout>