<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/dialog_order_detail_title"
                android:textColor="@color/primaryText"
                android:textSize="18sp"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0_5"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:background="@color/line_gray"/>


        <TextView
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_32"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/dimen_16"
            android:text="请确认您已成功付款"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvConfirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/dimen_16"
        android:layout_marginRight="@dimen/dimen_16"
        android:layout_above="@+id/tvCancle"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_gradient_primary_right"
        android:gravity="center"
        android:text="@string/dialog_sure"
        android:textColor="#fff"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tvCancle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/dimen_16"
        android:layout_marginRight="@dimen/dimen_16"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/dialog_cancel"
        android:textColor="@color/text_balck_161616"
        android:textSize="14sp"/>

</RelativeLayout>